Allow WRES to run under Java 9 by explicitly including JAXB libs
Refs #46562

--- a/build.gradle
+++ b/build.gradle
@@ -328,6 +328,11 @@ project(':wres-config')
     dependencies
     {
         compile project(':wres-datamodel-api')
+        // For Java 9+ compatibility:
+        runtime 'javax.xml.bind:jaxb-api:2.2.11'
+        runtime 'com.sun.xml.bind:jaxb-core:2.2.11'
+        runtime 'com.sun.xml.bind:jaxb-impl:2.2.11'
+        runtime 'javax.activation:activation:1.1.1'
     }
 
     dependencies
