--- a/build.gradle
+++ b/build.gradle
@@ -329,10 +329,9 @@ project(':wres-config')
     {
         compile project(':wres-datamodel-api')
         // For Java 9+ compatibility:
-        runtime 'javax.xml.bind:jaxb-api:2.2.11'
+        compile 'javax.xml.bind:jaxb-api:2.2.11'
         runtime 'com.sun.xml.bind:jaxb-core:2.2.11'
         runtime 'com.sun.xml.bind:jaxb-impl:2.2.11'
-        runtime 'javax.activation:activation:1.1.1'
     }
 
     dependencies
@@ -532,6 +531,9 @@ project(':wres-tasker')
         compile 'javax.ws.rs:javax.ws.rs-api:2.1'
         compile 'javax.annotation:javax.annotation-api:1.3.2'
 
+        // For Java 9+ compatibility:
+        compile 'javax.xml.bind:jaxb-api:2.2.11'
+
         // Server library to run a web server:
         compile 'org.eclipse.jetty:jetty-server:9.4.8.v20171121'
 
@@ -703,6 +705,9 @@ task(copyDocs, type: Copy, group: 'Documentation', dependsOn: buildDocs)
 apply plugin: 'application'
 
 mainClassName = 'wres.Main'
+
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 applicationDefaultJvmArgs = ['-Xms1628m', '-Xmx1628m',
                              '-XX:+HeapDumpOnOutOfMemoryError']
