--- a/build.gradle
+++ b/build.gradle
@@ -156,7 +156,7 @@ project(':wres-util')
 
         compile 'edu.ucar:cdm:5.0.0-alpha3'
 
-        runtime 'ch.qos.logback:logback-classic:1.2.3'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         testCompile 'junit:junit:4.12'
         testCompile files('../libs/external/EVS.jar')
@@ -280,7 +280,7 @@ project(':wres-vis')
         compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '1.2.6'
         compile 'com.google.guava:guava:22.0'
         compile 'org.slf4j:slf4j-api:1.7.25'
-        runtime 'ch.qos.logback:logback-classic:1.2.3'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         // For ohdcommonchps.jar:
         runtime group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.25'
@@ -410,7 +410,7 @@ project(':wres-grid')
         compile project(':wres-system')
         compile 'org.slf4j:slf4j-api:1.7.25'
         compile 'edu.ucar:cdm:5.0.0-alpha3'
-        runtime 'ch.qos.logback:logback-classic:1.2.3'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
         testCompile 'junit:junit:4.12'
     }
 }
@@ -477,7 +477,7 @@ project(':wres-worker')
         compile project( ':wres-messages' )
         compile 'org.slf4j:slf4j-api:1.7.25'
         compile 'com.rabbitmq:amqp-client:5.2.0'
-        runtime 'ch.qos.logback:logback-classic:1.2.3'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
     }
 
     apply plugin: 'application'
@@ -535,7 +535,7 @@ project(':wres-tasker')
 
         compile 'com.github.ben-manes.caffeine:caffeine:2.6.2'
 
-        runtime 'ch.qos.logback:logback-classic:1.2.3'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
         runtime 'org.glassfish.jersey.core:jersey-server:2.26'
         runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.26'
 
@@ -725,7 +725,7 @@ dependencies
 
     compile 'org.slf4j:slf4j-api:1.7.25'
 
-    runtime 'ch.qos.logback:logback-classic:1.2.3'
+    runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.8.47'
