--- a/build.gradle
+++ b/build.gradle
@@ -738,6 +738,16 @@ dependencies
 
     compile 'org.slf4j:slf4j-api:1.7.25'
 
+    compile 'javax.ws.rs:javax.ws.rs-api:2.1'
+    compile 'javax.annotation:javax.annotation-api:1.3.2'
+    compile 'org.eclipse.jetty:jetty-server:9.4.8.v20171121'
+    compile 'org.eclipse.jetty:jetty-webapp:9.4.8.v20171121'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.26'
+
+    runtime 'org.glassfish.jersey.core:jersey-server:2.26'
+    runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.26'
+    runtime 'org.glassfish.jersey.inject:jersey-hk2:2.26'
+
     runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
     testCompile 'junit:junit:4.12'
