Map ross to wresuser7
Refs #54585

--- a/wres-tasker/nonsrc/users.properties
+++ b/wres-tasker/nonsrc/users.properties
@@ -38,6 +38,6 @@ database.host.brad = ***REMOVED***rdb.***REMOVED***.***REMOVED***
 database.name.brad = wresuser6
 database.user.brad = wres_user
 
-database.host.hank2 = ***REMOVED***rdb.***REMOVED***.***REMOVED***
-database.name.hank2 = wresuser7
-database.user.hank2 = wres_user
+database.host.ross = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.ross = wresuser7
+database.user.ross = wres_user
