--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ buildscript
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5'
         // For markdown -> html
         classpath 'com.atlassian.commonmark:commonmark:0.9.0'
+        // To create a unified javadoc across submodules and top-level module:
+        classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:3.0.1'
     }
 }
 
@@ -37,6 +39,7 @@ plugins
     // To create trusted certificate files (.jks aka cacerts) from dir of .pem
     // (Not working: not friendly to our directory structure nor submodules)
     //id 'de.chkpnt.truststorebuilder' version '0.2.57'
+
 }
 
 repositories
@@ -725,6 +728,8 @@ if (!gitIsClean)
 {
     version = version + '-dev'
 }
+
+apply plugin: 'nebula-aggregate-javadocs'
 
 dependencies
 {
