Update my username to recently corrected spelling
Refs #54744

--- a/wres-tasker/nonsrc/users.properties
+++ b/wres-tasker/nonsrc/users.properties
@@ -1,6 +1,6 @@
 database.host.jesse = ***REMOVED***rdb.***REMOVED***.***REMOVED***
 database.name.jesse = wres3
-database.user.jesse = jesse.bickle
+database.user.jesse = jesse.bickel
 
 database.host.chris = ***REMOVED***rdb.***REMOVED***.***REMOVED***
 database.name.chris = wres
