Update docker-compose with a release candidate for 1.3
Ignore more files to speed the docker build command.

Refs #54744

--- a/.dockerignore
+++ b/.dockerignore
@@ -21,14 +21,22 @@ systests
 test
 testinput
 testoutput
+*.bat
+*.nc
+*.py
+*.txt
+*.tar
 *.webm
 utilities
 VLabRepoQuickTips.txt
 wres-config
 wres-datamodel
-wres-datamodel-api
+wres-grid
 wres-io
+wres-messages
 wres-metrics
-wres-thredds-facade
+wres-system
+wres-tasker
+wres-util
 wres-vis
 wres.iml
