Update the user-to-db map to reflect new database names and db user names
Refs #54952

--- a/wres-tasker/nonsrc/users.properties
+++ b/wres-tasker/nonsrc/users.properties
@@ -1,14 +1,14 @@
 database.host.jesse = ***REMOVED***rdb.***REMOVED***.***REMOVED***
-database.name.jesse = wres3
-database.user.jesse = jesse.bickel
+database.name.jesse = wres2
+database.user.jesse = wres_user2
 
 database.host.chris = ***REMOVED***rdb.***REMOVED***.***REMOVED***
-database.name.chris = wres
-database.user.chris = christopher.tubbs
+database.name.chris = wres1
+database.user.chris = wres_user1
 
 database.host.sanian = ***REMOVED***rdb.***REMOVED***.***REMOVED***
-database.name.sanian = wres4
-database.user.sanian = wres_user
+database.name.sanian = wres3
+database.user.sanian = wres_user3
 
 database.host.hank = ***REMOVED***rdb.***REMOVED***.***REMOVED***
 database.name.hank = wrestest3
