Ensures that all graphical outputs in PNG format respect the default setting for duration units (currently seconds). This includes the plot titles and legends, where applicable.
Refs #54805

--- a/build.gradle
+++ b/build.gradle
@@ -281,7 +281,8 @@ project(':wres-vis')
     {
         compile project(':wres-datamodel')
         compile project(':wres-config')
-        
+        compile project(':wres-util')        
+
         compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
         compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '1.2.6'
         compile 'com.google.guava:guava:22.0'
