--- a/wres-worker/docker-compose.yml
+++ b/wres-worker/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '2.2'
 services:
     worker:
-        image: "3f775ea654f6"
+        image: "af65f6279679"
         restart: always
         volumes:
          - /mnt/wres_share:/mnt/wres_share
          - /mnt/wres_secrets:/wres_secrets:ro
         network_mode: "host"
         environment:
-         - JAVA_OPTS=-Dwres.broker=***REMOVED***wres-broker${WRES_ENV_SUFFIX}
+         - JAVA_OPTS=-Dwres.broker=***REMOVED***wres-broker${WRES_ENV_SUFFIX} -Djava.io.tmpdir=/mnt/wres_share/evaluations
          - PGPASSFILE=/wres_secrets/.pgpass
         # Worker JVM should have 32m max heap, WRES should have 1628m max heap
         mem_limit: 2048m
