--- a/build.gradle
+++ b/build.gradle
@@ -152,14 +152,21 @@ project(':wres-util')
     {
         compile project(':wres-datamodel')
 
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
 
         compile 'com.google.guava:guava:22.0'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
-        compile 'edu.ucar:cdm:5.0.0-alpha3'
+        compile('edu.ucar:cdm:5.0.0-alpha3')
+        {
+            // Because we use slf4j, not jcl:
+            exclude group: 'commons-logging', module: 'commons-logging'
+        }
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+
+        // Because cdm uses apache commons logging, bridge to slf4j
+        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta2'
 
         testCompile 'junit:junit:4.12'
         testCompile files('../libs/external/EVS.jar')
@@ -171,7 +178,7 @@ project(':wres-system')
     dependencies
     {
         compile project(':wres-util')
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
 
         compile 'com.google.guava:guava:22.0'
 
@@ -181,6 +188,10 @@ project(':wres-system')
 
         // connection pooling:
         compile 'com.mchange:c3p0:0.9.5.2'
+
+        // Because org.postgresql:postgresql uses JUL logging, bridge it, here
+        // at compile time because we need to expose a class to JUL.
+        compile 'org.slf4j:jul-to-slf4j:1.8.0-beta2'
 
         //JB @ 02/16/17
         testCompile group: 'com.google.guava', name: 'guava-testlib', version: '21.0'
@@ -200,7 +211,7 @@ project(':wres-datamodel')
 {
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
         compile 'org.apache.commons:commons-lang3:3.6'
         compile project(':wres-config')
 
@@ -221,26 +232,41 @@ project(':wres-io')
         compile project(':wres-vis')
         compile project(':wres-grid')
 
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
         compile 'org.glassfish.jersey.core:jersey-common:2.27'
         compile 'org.glassfish.jersey.core:jersey-client:2.27'
         compile 'org.glassfish.jersey.inject:jersey-hk2:2.27'
         compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.27'
 
-        compile 'edu.ucar:cdm:5.0.0-alpha3'
+        compile('edu.ucar:cdm:5.0.0-alpha3')
+        {
+            // Because we use slf4j, not jcl:
+            exclude group: 'commons-logging', module: 'commons-logging'
+        }
+
 
         compile group: 'org.apache.commons', name: 'commons-compress', version: '1.14'
 
         compile group: 'org.liquibase', name: 'liquibase-core', version: '3.5.3'
 
-        compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.370'
+        compile( group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.370')
+        {
+            // Because we use slf4j, not jcl:
+            exclude group: 'commons-logging', module: 'commons-logging'
+        }
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.1'
 
         // connection pooling:
         compile 'com.mchange:c3p0:0.9.5.2'
+
+        // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
+        runtime 'org.slf4j:jul-to-slf4j:1.8.0-beta2'
+
+        // Because cdm and aws sdk uses apache commons logging, bridge to slf4j
+        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta2'
 
         //JB @ 02/16/17
         testCompile group: 'com.google.guava', name: 'guava-testlib', version: '21.0'
@@ -266,11 +292,10 @@ project(':wres-metrics')
         compile project(':wres-datamodel')
         compile project(':wres-config')
         compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
 
         testCompile project (':wres-datamodel')
         testCompile 'junit:junit:4.12'
-        testCompile 'org.slf4j:slf4j-api:1.7.25'
         testCompile 'org.mockito:mockito-core:2.8.47'
     }
 }
@@ -286,11 +311,11 @@ project(':wres-vis')
         compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
         compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version: '1.2.6'
         compile 'com.google.guava:guava:22.0'
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         // For ohdcommonchps.jar:
-        runtime group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.25'
+        runtime group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.8.0-beta2'
 
         compile files('../libs/external/jcommon-1.0.12.jar')
         compile files('../libs/external/jfreechart-1.0.9.jar')
@@ -400,7 +425,7 @@ project(':wres-config')
 
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
 
         // To know about @Location
         compile 'com.sun.xml.bind:jaxb-core:2.2.11'
@@ -425,9 +450,18 @@ project(':wres-grid')
         compile project(':wres-config')
         compile project(':wres-util')
         compile project(':wres-system')
-        compile 'org.slf4j:slf4j-api:1.7.25'
-        compile 'edu.ucar:cdm:5.0.0-alpha3'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+        compile('edu.ucar:cdm:5.0.0-alpha3')
+        {
+            // Because we use slf4j, not jcl:
+            exclude group: 'commons-logging', module: 'commons-logging'
+        }
+
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+
+        // Because cdm uses apache commons logging, bridge to slf4j
+        runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta2'
+
         testCompile 'junit:junit:4.12'
     }
 }
@@ -479,7 +513,7 @@ project(':wres-messages')
 
     dependencies
     {
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
         compile 'com.google.protobuf:protobuf-java:3.5.1'
 
         testCompile 'junit:junit:4.12'
@@ -492,7 +526,7 @@ project(':wres-worker')
     dependencies
     {
         compile project( ':wres-messages' )
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
         compile 'com.rabbitmq:amqp-client:5.2.0'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
     }
@@ -532,7 +566,7 @@ project(':wres-tasker')
     dependencies
     {
         compile project( ':wres-messages' )
-        compile 'org.slf4j:slf4j-api:1.7.25'
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
         compile 'com.rabbitmq:amqp-client:5.2.0'
         compile 'javax.ws.rs:javax.ws.rs-api:2.1'
         compile 'javax.annotation:javax.annotation-api:1.3.2'
@@ -716,7 +750,8 @@ sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 applicationDefaultJvmArgs = ['-Xms1628m', '-Xmx1628m',
-                             '-XX:+HeapDumpOnOutOfMemoryError']
+                             '-XX:+HeapDumpOnOutOfMemoryError',
+                             '-Djava.util.logging.config.class=wres.system.logging.JavaUtilLoggingRedirector']
 
 // Get the commit and date from the TOP for this project, it is outermost.
 def gitCommit = grgit.head()
@@ -742,7 +777,7 @@ dependencies
     compile project(':wres-config')
     compile project(':wres-vis')
 
-    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile 'org.slf4j:slf4j-api:1.8.0-beta2'
 
     compile 'javax.ws.rs:javax.ws.rs-api:2.1'
     compile 'javax.annotation:javax.annotation-api:1.3.2'
