--- a/build.gradle
+++ b/build.gradle
@@ -793,6 +793,10 @@ dependencies
 
     runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
+
+    testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
+    testCompile group: 'com.google.guava', name: 'guava-testlib', version: '21.0'
+    testCompile group: 'com.google.guava', name: 'guava', version: '22.0'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.8.47'
 }
@@ -817,12 +821,14 @@ sourceSets
         java
         {
             srcDirs = ['test']
+            exclude 'wres/systests/**'
         }
 
         resources
         {
             srcDirs = ['testNonsrc']
         }
+   
     }
 }
 
