--- a/build.gradle
+++ b/build.gradle
@@ -169,6 +169,14 @@ project(':wres-util')
         runtime 'org.slf4j:jcl-over-slf4j:1.8.0-beta2'
 
         testCompile 'junit:junit:4.12'
+
+        // Mocking help
+        testCompile 'org.mockito:mockito-core:2.8.47'
+
+        // super-duper mocking help (mocking static, private methods)
+        testCompile 'org.powermock:powermock-api-mockito2:1.7.1'
+        testCompile 'org.powermock:powermock-module-junit4:1.7.1'
+
         testCompile files('../libs/external/EVS.jar')
     }
 }
