--- a/build.gradle
+++ b/build.gradle
@@ -294,6 +294,12 @@ project(':wres-io')
         // Use mockserver as a mock server for mock API responses
         testCompile 'org.mock-server:mockserver-netty:5.4.1'
     }
+
+    test
+    {
+        // Set the socket timeout for tests involving mockserver to 120s
+        systemProperties = [ "mockserver.maxSocketTimeout": 120000 ]
+    }
 }
 
 project(':wres-metrics')
