Point all users of NWCAL instance to NWCAL dev db
... regardless of environment. This configuration file is known to be
ugly and dirty and should be removed upon completion of #40271 at
which point no names of people would be needed to operate the software.

Fixes #59039

--- a/wres-tasker/nonsrc/users.properties
+++ b/wres-tasker/nonsrc/users.properties
@@ -1,55 +1,55 @@
-database.host.jesse = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.jesse = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.jesse = wres2
 database.user.jesse = wres_user2
 
-database.host.chris = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.chris = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.chris = wres1
 database.user.chris = wres_user1
 
-database.host.sanian = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.sanian = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.sanian = wres3
 database.user.sanian = wres_user3
 
-database.host.test_revision = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.test_revision = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.test_revision = wres4
 database.user.test_revision = wres_user4
 
-database.host.test_long = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.test_long = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.test_long = wres5
 database.user.test_long = wres_user5
 
-database.host.hank = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.hank = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.hank = wres6
 database.user.hank = wres_user6
 
-database.host.raymond = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.raymond = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.raymond = wres7
 database.user.raymond = wres_user7
 
-database.host.xia = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.xia = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.xia = wres8
 database.user.xia = wres_user8
 
-database.host.limin = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.limin = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.limin = wres9
 database.user.limin = wres_user9
 
-database.host.seann = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.seann = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.seann = wres10
 database.user.seann = wres_user10
 
-database.host.alaina = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.alaina = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.alaina = wres11
 database.user.alaina = wres_user11
 
-database.host.mike = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.mike = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.mike = wres12
 database.user.mike = wres_user12
 
-database.host.brad = ***REMOVED***rdb.***REMOVED***.***REMOVED***
-database.name.brad = wres13
-database.user.brad = wres_user13
+database.host.team = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.team = wres13
+database.user.team = wres_user13
 
-database.host.ross = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.host.ross = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.ross = wres14
 database.user.ross = wres_user14
