Run system tests as JUnit tests within gradle
When one runs the distZip task on systests/build.gradle, the resulting
artifact includes the gradle wrapper and its own gradle build script.

After unzipping the system tests, one can run this command:

    ./gradlew check -PwresZipDirectory=[...] -PversionToTest=[version]

The default values for the properties above are set in the innermost
gradle.properties such that a developer with the full source tree
can cd to systests/dist and run this command:

    ../../gradlew check -PversionToTest=[version]

Refs #51654 specifically #51654-84, #51654-136, #51654-199, #51654-200

--- a/systests/build.gradle
+++ b/systests/build.gradle
@@ -36,8 +36,25 @@ distributions
                 include 'scenario*/FAILS'
                 include 'scenario*/benchmarks/**'
                 include 'smalldata/**'
-		include 'scripts/*'
-		exclude 'scenario*/output'
+                include 'scripts/*'
+                exclude 'scenario*/output'
+            }
+
+            // JUnit (integration) tests to be run after unzipping and scripts:
+            from('dist')
+            {
+                include 'build.gradle'
+                include 'settings.gradle'
+                include 'gradle.properties'
+                include 'src/test/java/**'
+            }
+
+            // Gradle software itself
+            from('..')
+            {
+                include 'gradlew'
+                include 'gradlew.bat'
+                include 'gradle/wrapper/*'
             }
         }
     }
