--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ plugins
 
     //id 'com.github.jacobono.jaxb' version '1.3.5'
     // Above is unmaintained, less gradle-y, below fork has several improvements
-    id 'org.openrepose.gradle.plugins.jaxb' version '2.4.1'
+    id 'org.openrepose.gradle.plugins.jaxb' version '2.5.0'
 
     // For ability to use git ids for versioning jar files:
     id 'org.ajoberstar.grgit' version '1.7.2'
@@ -173,11 +173,11 @@ project(':wres-util')
         testCompile 'junit:junit:4.12'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:2.8.47'
+        testCompile 'org.mockito:mockito-core:2.23.4'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:1.7.1'
-        testCompile 'org.powermock:powermock-module-junit4:1.7.1'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.0'
 
         testCompile files('../libs/external/EVS.jar')
     }
@@ -194,7 +194,7 @@ project(':wres-system')
 
         // to use native postgres copy, need this on compile, otherwise runtime
         compile 'org.postgresql:postgresql:42.2.1'
-        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.5.3'
+        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.6.3'
 
         // connection pooling:
         compile 'com.mchange:c3p0:0.9.5.2'
@@ -209,11 +209,11 @@ project(':wres-system')
         testCompile 'junit:junit:4.12'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:2.8.47'
+        testCompile 'org.mockito:mockito-core:2.23.4'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:1.7.1'
-        testCompile 'org.powermock:powermock-module-junit4:1.7.1'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.0'
     }
 }
 
@@ -259,7 +259,7 @@ project(':wres-io')
 
         compile group: 'org.apache.commons', name: 'commons-compress', version: '1.14'
 
-        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.5.3'
+        compile group: 'org.liquibase', name: 'liquibase-core', version: '3.6.3'
 
         compile( group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.370')
         {
@@ -273,6 +273,12 @@ project(':wres-io')
         // connection pooling:
         compile 'com.mchange:c3p0:0.9.5.2'
 
+        // wres.io.utilities uses javax.json.* imports
+        compile 'org.glassfish:javax.json:1.1.4'
+
+        // One reader uses javax.validation.constraints.NotNull
+        compile 'javax.validation:validation-api:2.0.1.Final'
+
         // Because org.postgresql:postgresql uses JUL logging, bridge at runtime
         runtime 'org.slf4j:jul-to-slf4j:1.8.0-beta2'
 
@@ -285,17 +291,20 @@ project(':wres-io')
         testCompile 'junit:junit:4.12'
 
         // Mocking help
-        testCompile 'org.mockito:mockito-core:2.8.47'
+        testCompile 'org.mockito:mockito-core:2.23.4'
 
         // super-duper mocking help (mocking static, private methods)
-        testCompile 'org.powermock:powermock-api-mockito2:1.7.1'
-        testCompile 'org.powermock:powermock-module-junit4:1.7.1'
+        testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
+        testCompile 'org.powermock:powermock-module-junit4:2.0.0'
 
         // try out an embedded postgres
-        testCompile 'ru.yandex.qatools.embed:postgresql-embedded:2.9'
+        testCompile 'ru.yandex.qatools.embed:postgresql-embedded:2.10'
+        // Above depends on flapdoodle, but we need an upgrade to flapdoodle
+        // for Java 11 to work.
+        testCompile 'de.flapdoodle.embed:de.flapdoodle.embed.process:2.1.2'
 
         // Use mockserver as a mock server for mock API responses
-        testCompile 'org.mock-server:mockserver-netty:5.4.1'
+        testCompile 'org.mock-server:mockserver-netty:5.5.1'
     }
 
     test
@@ -316,7 +325,7 @@ project(':wres-metrics')
 
         testCompile project (':wres-datamodel')
         testCompile 'junit:junit:4.12'
-        testCompile 'org.mockito:mockito-core:2.8.47'
+        testCompile 'org.mockito:mockito-core:2.23.4'
     }
 }
 
@@ -363,34 +372,39 @@ project(':wres-vis')
 
 project(':wres-config')
 {
-    // apply plugin: 'com.github.jacobono.jaxb'
     apply plugin: 'org.openrepose.gradle.plugins.jaxb'
 
     dependencies
     {
+        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
+
         // For Java 9+ compatibility:
-        compile 'javax.xml.bind:jaxb-api:2.2.11'
+        compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
 
         // TODO: check that this is consistent with the declaration of dependencies elsewhere
         // and update if not. Added in the context of #44996
         // https://mvnrepository.com/artifact/org.jvnet.jaxb2_commons/jaxb2-basics-runtime
-        compile group: 'org.jvnet.jaxb2_commons', name: 'jaxb2-basics-runtime', version: '1.11.1'
+        compile group: 'org.jvnet.jaxb2_commons', name: 'jaxb2-basics-runtime', version: '0.12.0'
 
-        runtime 'com.sun.xml.bind:jaxb-core:2.2.11'
-        runtime 'com.sun.xml.bind:jaxb-impl:2.2.11'
-    }
+        // To know about @Location
+        compile 'org.glassfish.jaxb:jaxb-core:2.3.0.1'
 
-    dependencies
-    {
-        xjc 'com.github.sabomichal:immutable-xjc-plugin:1.3.3'
+        runtime 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
+
+        runtime 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.7.4'
+
+        testCompile 'junit:junit:4.12'
+
         // May help in future with #37380, may need to modify sources
         // available at https://git.apache.org/cxf-xjc-utils.git in dv dir:
         // xjc 'org.apache.cxf.xjcplugins:cxf-xjc-dv:3.2.0'
-        jaxb 'org.jvnet.jaxb2_commons:jaxb2-basics-ant:1.11.1'
-        jaxb 'org.jvnet.jaxb2_commons:jaxb2-basics:1.11.1'
-        jaxb 'org.jvnet.jaxb2_commons:jaxb2-basics-annotate:1.0.2'
-        jaxb 'com.sun.xml.bind:jaxb-core:2.2.11'
-        jaxb 'com.sun.xml.bind:jaxb-xjc:2.2.11'
+        jaxb 'org.jvnet.jaxb2_commons:jaxb2-basics-ant:0.12.0'
+        jaxb 'org.jvnet.jaxb2_commons:jaxb2-basics:0.12.0'
+        jaxb 'org.jvnet.jaxb2_commons:jaxb2-basics-annotate:1.1.0'
+
+        // jaxb-xjc transitively includes bind-api and jaxb-core
+        jaxb 'org.glassfish.jaxb:jaxb-xjc:2.3.2'
+        jaxb 'com.github.sabomichal:immutable-xjc-plugin:1.4'
     }
 
     def generatedIntermediateDir = "${project.buildDir}/generated"
@@ -443,16 +457,6 @@ project(':wres-config')
         into destinationDir
     }
 
-    dependencies
-    {
-        compile 'org.slf4j:slf4j-api:1.8.0-beta2'
-
-        // To know about @Location
-        compile 'com.sun.xml.bind:jaxb-core:2.2.11'
-        runtime 'org.eclipse.persistence:org.eclipse.persistence.moxy:2.6.4'
-
-        testCompile 'junit:junit:4.12'
-    }
     // Wiring the generation of jaxb classes into standard compilation task:
     compileJava.dependsOn copyGenerated
 
@@ -592,7 +596,7 @@ project(':wres-tasker')
         compile 'javax.annotation:javax.annotation-api:1.3.2'
 
         // For Java 9+ compatibility:
-        compile 'javax.xml.bind:jaxb-api:2.2.11'
+        compile 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
 
         // Server library to run a web server:
         compile 'org.eclipse.jetty:jetty-server:9.4.14.v20181114'
@@ -818,7 +822,7 @@ dependencies
     testCompile group: 'com.google.guava', name: 'guava-testlib', version: '21.0'
     testCompile group: 'com.google.guava', name: 'guava', version: '22.0'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.8.47'
+    testCompile 'org.mockito:mockito-core:2.23.4'
 }
 
 sourceSets
