Add default tasks to gradle build script including javadoc
Allows programmers to run the following to do complete build:

    ./gradlew

--- a/build.gradle
+++ b/build.gradle
@@ -915,3 +915,5 @@ jar
                    "Implementation-Version": version)
     }
 }
+
+defaultTasks 'installDist', 'test', 'javadoc', 'jacocorootreport'
