--- a/build.gradle
+++ b/build.gradle
@@ -611,6 +611,9 @@ project(':wres-tasker')
 
         compile 'com.github.ben-manes.caffeine:caffeine:2.6.2'
 
+        // To accurately detect mime types of files.
+        compile 'org.apache.tika:tika-core:1.20'
+
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
         runtime 'org.glassfish.jersey.core:jersey-server:2.27'
         runtime 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.27'
