Use subquery for source row inserts, works with H2 and pg
Also add an ignored test along with commented-out build.gradle
lines that when unignored and uncommented will run a test in H2.
But this change to build.gradle breaks the pg-dependent tests, so
it is not ready for prime time.

Also add proposed (commented-out) changes to Query for isolation.
Using JDBC TRANSACTION_SERIALIZABLE means more changes needed to
handle conflicts/retries.

Refs #60804

--- a/build.gradle
+++ b/build.gradle
@@ -234,6 +234,12 @@ project(':wres-datamodel')
 
 project(':wres-io')
 {
+    //configurations
+    //{
+    //    testCompile.exclude group: 'org.postgresql',  module: 'postgresql'
+    //    testRuntime.exclude group: 'org.postgresql', module: 'postgresql'
+    //}
+
     dependencies
     {
         compile project(':wres-util')
@@ -306,6 +312,9 @@ project(':wres-io')
 
         // Use mockserver as a mock server for mock API responses
         testCompile 'org.mock-server:mockserver-netty:5.5.1'
+
+        // Use H2 for truly embedded SQL db
+        //testCompile 'com.h2database:h2:1.4.198'
     }
 
     test
