--- a/build.gradle
+++ b/build.gradle
@@ -238,12 +238,6 @@ project(':wres-datamodel')
 
 project(':wres-io')
 {
-    //configurations
-    //{
-    //    testCompile.exclude group: 'org.postgresql',  module: 'postgresql'
-    //    testRuntime.exclude group: 'org.postgresql', module: 'postgresql'
-    //}
-
     dependencies
     {
         compile project(':wres-util')
@@ -307,18 +301,11 @@ project(':wres-io')
         testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
         testCompile 'org.powermock:powermock-module-junit4:2.0.0'
 
-        // try out an embedded postgres
-        testCompile 'ru.yandex.qatools.embed:postgresql-embedded:2.10'
-        // Above depends on flapdoodle, but we need an upgrade to flapdoodle
-        // for Java 11 to work.
-        // Doesn't play nicely on Windows: see #59706-21 and posts thereafter
-        // testCompile 'de.flapdoodle.embed:de.flapdoodle.embed.process:2.1.2'
-
         // Use mockserver as a mock server for mock API responses
         testCompile 'org.mock-server:mockserver-netty:5.5.1'
 
         // Use H2 for truly embedded SQL db
-        //testCompile 'com.h2database:h2:1.4.198'
+        testCompile 'com.h2database:h2:1.4.199'
     }
 
     test
