Broker should use certs/keys from secrets directory
There are new keys there will be new certificates. So we should not
load the one from one place and the other from another, and we
definitely should not store private key material in the repo,
therefore we should store neither in the repo.

Refs #62109

--- a/wres-broker/nonsrc/rabbitmq-ti.config
+++ b/wres-broker/nonsrc/rabbitmq-ti.config
@@ -13,8 +13,8 @@
             {
                 ssl_options,
                 [
-                    { cacertfile, "/opt/wres-broker/wres_ca_x509_cert.pem" },
-                    { certfile, "/opt/wres-broker/***REMOVED***wres-broker-ti_server_x509_cert.pem" },
+                    { cacertfile, "/wres_secrets/wres_ca_x509_cert.pem" },
+                    { certfile, "/wres_secrets/***REMOVED***wres-broker-ti_server_x509_cert.pem" },
                     { keyfile, "/wres_secrets/***REMOVED***wres-broker-ti_server_private_rsa_key.pem" },
                     {
                         ciphers,
@@ -60,8 +60,8 @@
                     {
                         ssl_opts,
                         [
-                            { cacertfile, "/opt/wres-broker/wres_ca_x509_cert.pem" },
-                            { certfile, "/opt/wres-broker/***REMOVED***wres-broker-ti_server_x509_cert.pem" },
+                            { cacertfile, "/wres_secrets/wres_ca_x509_cert.pem" },
+                            { certfile, "/wres_secrets/***REMOVED***wres-broker-ti_server_x509_cert.pem" },
                             { keyfile, "/wres_secrets/***REMOVED***wres-broker-ti_server_private_rsa_key.pem" },
                             {
                                 ciphers,
