--- a/wres-broker/nonsrc/rabbitmq-dev.config
+++ b/wres-broker/nonsrc/rabbitmq-dev.config
@@ -13,8 +13,8 @@
             {
                 ssl_options,
                 [
-                    { cacertfile, "/opt/wres-broker/wres_ca_x509_cert.pem" },
-                    { certfile, "/opt/wres-broker/***REMOVED***wres-broker-dev_server_x509_cert.pem" },
+                    { cacertfile, "/wres_secrets/wres_ca_x509_cert.pem" },
+                    { certfile, "/wres_secrets/***REMOVED***wres-broker-dev_server_x509_cert.pem" },
                     { keyfile, "/wres_secrets/***REMOVED***wres-broker-dev_server_private_rsa_key.pem" },
                     {
                         ciphers,
@@ -60,8 +60,8 @@
                     {
                         ssl_opts,
                         [
-                            { cacertfile, "/opt/wres-broker/wres_ca_x509_cert.pem" },
-                            { certfile, "/opt/wres-broker/***REMOVED***wres-broker-dev_server_x509_cert.pem" },
+                            { cacertfile, "/wres_secrets/wres_ca_x509_cert.pem" },
+                            { certfile, "/wres_secrets/***REMOVED***wres-broker-dev_server_x509_cert.pem" },
                             { keyfile, "/wres_secrets/***REMOVED***wres-broker-dev_server_private_rsa_key.pem" },
                             {
                                 ciphers,
