Reassign database instances
Refs #62784

--- a/wres-tasker/nonsrc/users.properties
+++ b/wres-tasker/nonsrc/users.properties
@@ -6,9 +6,9 @@ database.host.chris = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.chris = wres1
 database.user.chris = wres_user1
 
-database.host.sanian = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.sanian = wres3
-database.user.sanian = wres_user3
+database.host.cbrfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.cbrfc = wres3
+database.user.cbrfc = wres_user3
 
 database.host.test_revision = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.test_revision = wres4
@@ -34,21 +34,21 @@ database.host.limin = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.limin = wres9
 database.user.limin = wres_user9
 
-database.host.seann = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.seann = wres10
-database.user.seann = wres_user10
+database.host.marfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.marfc = wres10
+database.user.marfc = wres_user10
 
-database.host.alaina = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.alaina = wres11
-database.user.alaina = wres_user11
+database.host.nerfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.nerfc = wres11
+database.user.nerfc = wres_user11
 
-database.host.mike = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.mike = wres12
-database.user.mike = wres_user12
+database.host.abrfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.abrfc = wres12
+database.user.abrfc = wres_user12
 
-database.host.team = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.team = wres13
-database.user.team = wres_user13
+database.host.nwrfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.nwrfc = wres13
+database.user.nwrfc = wres_user13
 
 database.host.ross = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.ross = wres14
