Add two user-to-db bindings in tasker configuration
Refs #64442

--- a/wres-tasker/nonsrc/users.properties
+++ b/wres-tasker/nonsrc/users.properties
@@ -53,3 +53,11 @@ database.user.nwrfc = wres_user13
 database.host.ross = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
 database.name.ross = wres14
 database.user.ross = wres_user14
+
+database.host.alex = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.alex = wres15
+database.user.alex = wres_user15
+
+database.host.rhoer = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.rhoer = wres16
+database.user.rhoer = wres_user16
