Support multiple environments in tasker
Now the users.properties bindings require an environment name.

Refs #65304

--- a/wres-tasker/nonsrc/users.properties
+++ b/wres-tasker/nonsrc/users.properties
@@ -1,63 +1,130 @@
-database.host.jesse = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.jesse = wres2
-database.user.jesse = wres_user2
+database.host.-dev.jesse = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.jesse = wres2
+database.user.-dev.jesse = wres_user2
 
-database.host.chris = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.chris = wres1
-database.user.chris = wres_user1
+database.host.-dev.chris = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.chris = wres1
+database.user.-dev.chris = wres_user1
 
-database.host.cbrfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.cbrfc = wres3
-database.user.cbrfc = wres_user3
+database.host.-dev.cbrfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.cbrfc = wres3
+database.user.-dev.cbrfc = wres_user3
 
-database.host.test_revision = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.test_revision = wres4
-database.user.test_revision = wres_user4
+database.host.-dev.test_revision = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.test_revision = wres4
+database.user.-dev.test_revision = wres_user4
 
-database.host.test_long = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.test_long = wres5
-database.user.test_long = wres_user5
+database.host.-dev.test_long = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.test_long = wres5
+database.user.-dev.test_long = wres_user5
 
-database.host.hank = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.hank = wres6
-database.user.hank = wres_user6
+database.host.-dev.hank = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.hank = wres6
+database.user.-dev.hank = wres_user6
 
-database.host.raymond = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.raymond = wres7
-database.user.raymond = wres_user7
+database.host.-dev.raymond = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.raymond = wres7
+database.user.-dev.raymond = wres_user7
 
-database.host.xia = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.xia = wres8
-database.user.xia = wres_user8
+database.host.-dev.xia = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.xia = wres8
+database.user.-dev.xia = wres_user8
 
-database.host.limin = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.limin = wres9
-database.user.limin = wres_user9
+database.host.-dev.limin = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.limin = wres9
+database.user.-dev.limin = wres_user9
 
-database.host.marfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.marfc = wres10
-database.user.marfc = wres_user10
+database.host.-dev.marfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.marfc = wres10
+database.user.-dev.marfc = wres_user10
 
-database.host.nerfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.nerfc = wres11
-database.user.nerfc = wres_user11
+database.host.-dev.nerfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.nerfc = wres11
+database.user.-dev.nerfc = wres_user11
 
-database.host.abrfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.abrfc = wres12
-database.user.abrfc = wres_user12
+database.host.-dev.abrfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.abrfc = wres12
+database.user.-dev.abrfc = wres_user12
 
-database.host.nwrfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.nwrfc = wres13
-database.user.nwrfc = wres_user13
+database.host.-dev.nwrfc = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.nwrfc = wres13
+database.user.-dev.nwrfc = wres_user13
 
-database.host.ross = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.ross = wres14
-database.user.ross = wres_user14
+database.host.-dev.ross = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.ross = wres14
+database.user.-dev.ross = wres_user14
 
-database.host.alex = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.alex = wres15
-database.user.alex = wres_user15
+database.host.-dev.alex = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.alex = wres15
+database.user.-dev.alex = wres_user15
 
-database.host.rhoer = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
-database.name.rhoer = wres16
-database.user.rhoer = wres_user16
+database.host.-dev.rhoer = ***REMOVED***wresdb-dev01.***REMOVED***.***REMOVED***
+database.name.-dev.rhoer = wres16
+database.user.-dev.rhoer = wres_user16
+
+
+database.host.-ti.jesse = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.jesse = wres2
+database.user.-ti.jesse = wres_user2
+
+database.host.-ti.chris = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.chris = wres1
+database.user.-ti.chris = wres_user1
+
+database.host.-ti.cbrfc = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.cbrfc = wres3
+database.user.-ti.cbrfc = wres_user3
+
+database.host.-ti.test_revision = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.test_revision = wres4
+database.user.-ti.test_revision = wres_user4
+
+database.host.-ti.test_long = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.test_long = wres5
+database.user.-ti.test_long = wres_user5
+
+database.host.-ti.hank = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.hank = wres6
+database.user.-ti.hank = wres_user6
+
+database.host.-ti.raymond = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.raymond = wres7
+database.user.-ti.raymond = wres_user7
+
+database.host.-ti.xia = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.xia = wres8
+database.user.-ti.xia = wres_user8
+
+database.host.-ti.limin = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.limin = wres9
+database.user.-ti.limin = wres_user9
+
+database.host.-ti.marfc = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.marfc = wres10
+database.user.-ti.marfc = wres_user10
+
+database.host.-ti.nerfc = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.nerfc = wres11
+database.user.-ti.nerfc = wres_user11
+
+database.host.-ti.abrfc = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.abrfc = wres12
+database.user.-ti.abrfc = wres_user12
+
+database.host.-ti.nwrfc = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.nwrfc = wres13
+database.user.-ti.nwrfc = wres_user13
+
+database.host.-ti.ross = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.ross = wres14
+database.user.-ti.ross = wres_user14
+
+database.host.-ti.alex = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.alex = wres15
+database.user.-ti.alex = wres_user15
+
+database.host.-ti.rhoer = ***REMOVED***rdb.***REMOVED***.***REMOVED***
+database.name.-ti.rhoer = wres16
+database.user.-ti.rhoer = wres_user16
+
+
