--- a/docker-compose-all-roles.yml
+++ b/docker-compose-all-roles.yml
@@ -13,9 +13,8 @@ services:
          # To read output data:
          - /mnt/wres_share:/mnt/wres_share
         environment:
-         - JAVA_OPTS=-Dwres.broker=broker
          # Make sure to pass through WRES_ENV_SUFFIX to tasker at runtime
-         - WRES_ENV_SUFFIX=${WRES_ENV_SUFFIX}
+         - JAVA_OPTS=-Dwres.broker=broker -Dwres.environment=${WRES_ENV_SUFFIX}
         # Tasker JVM should have 160m max heap specified at launch
         # The total limit includes stack space which depends on Thread count
         mem_limit: 735m
