Small change to build for wres-config to cause fresh build
Hopefully actually fixes #65335

--- a/build.gradle
+++ b/build.gradle
@@ -467,7 +467,7 @@ project(':wres-config')
     javadoc
     {
         // XJC generates Java8-unfriendly javadoc. Do not bother generating.
-        excludes = ['**/generated/*.java']
+        //excludes = ['**/generated/*.java']
     }
 }
 
