--- a/docker-compose-all-roles.yml
+++ b/docker-compose-all-roles.yml
@@ -3,7 +3,7 @@ services:
     tasker:
         ports:
          - "443:8443"
-        image: "55a8154c19b1"
+        image: "${DOCKER_REGISTRY}/wres/wres-tasker:20190624-5e838bc"
         restart: always
         depends_on:
          - "broker"
@@ -22,7 +22,7 @@ services:
         ports:
          - "5671:5671"
          - "15671:15671"
-        image: "fd7ee5d59ff3"
+        image: "${DOCKER_REGISTRY}/wres/wres-broker:20190426-048cdf6"
         restart: always
         volumes:
          # For certificates and keys that correspond to them:
@@ -32,7 +32,7 @@ services:
         # rabbitmq.conf should have 180m specified as high watermark
         mem_limit: 360m
     worker:
-        image: "abcf3287b727"
+        image: "${DOCKER_REGISTRY}/wres/wres-worker:20190626-6ca8310"
         restart: always
         depends_on:
          - "broker"
