--- a/docker-compose-workers-only.yml
+++ b/docker-compose-workers-only.yml
@@ -1,7 +1,7 @@
 version: '2.2'
 services:
     worker:
-        image: "ad201fcae9b2"
+        image: "${DOCKER_REGISTRY}/wres/wres-worker:20190626-6ca8310"
         restart: always
         volumes:
          - /mnt/wres_share:/mnt/wres_share
